--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,7 +1,7 @@
 [supervisord]
 nodaemon=true
 
-[program:kippo]
+[program:glastopf]
 directory=/data/glastopf/
 command=glastopf-runner
 autorestart=true
