--- a/upstart/glastopf.conf
+++ b/upstart/glastopf.conf
@@ -5,7 +5,7 @@ stop on runlevel [!2345]
 respawn
 script
   sleep 1
-  /usr/bin/docker run --name glastopf --rm -p 80:80 -v /data/glastopf dtagdevsec/glastopf 
+  /usr/bin/docker run --name glastopf --rm=true -p 80:80 -v /data/glastopf dtagdevsec/glastopf 
 end script
 post-stop script
   sleep 1
