--- a/glastopf.cfg
+++ b/glastopf.cfg
@@ -5,6 +5,11 @@ uid = tpot
 gid = tpot
 proxy_enabled = False
 
+[ssl]
+enabled = False
+certfile = 
+keyfile = 
+
 #Generic logging for general monitoring
 [logging]
 consolelog_enabled = True
@@ -14,8 +19,9 @@ logfile = log/glastopf.log
 [dork-db]
 enabled = True
 pattern = rfi
-#Extracts dorks from a online dorks service operated by The Honeynet Project
-mnem_service = True
+# Extracts dorks from a online dorks service operated by The Honeynet Project
+# This service is down until further notice!
+mnem_service = False
 
 [hpfeed]
 enabled = False
@@ -86,3 +92,9 @@ handler = AMQP/TCP/UDP
 [misc]
 # set webserver banner
 banner = Apache/2.0.48
+
+[surface]
+#https://www.google.com/webmasters/
+google_meta =
+#http://www.bing.com/toolbox/webmaster
+bing_meta =
