--- a/upstart/glastopf.conf
+++ b/upstart/glastopf.conf
@@ -2,23 +2,26 @@
 # T-Pot Community Edition                              #
 # Glastopf upstart script                              #
 #                                                      #
-# v0.50 by mo, DTAG, 2015-01-27                        #
+# v0.53 by mo, DTAG, 2015-11-02                        #
 ########################################################
 
 description "Glastopf"
 author "mo"
-start on started docker and filesystem
+start on (started docker and filesystem)
 stop on runlevel [!2345]
 respawn
 pre-start script
   # Remove any existing glastopf containers
   myCID=$(docker ps -a | grep glastopf | awk '{ print $1 }')
   if [ "$myCID" != "" ];
-    then docker rm $myCID;
+    then docker rm -v $myCID;
   fi
 end script
 script
   # Delayed start to avoid rapid respawning
-  sleep $(((RANDOM % 5)+5)) 
-  /usr/bin/docker run --name glastopf --rm=true -p 80:80 -v /data/glastopf dtagdevsec/glastopf 
+  sleep $(((RANDOM % 5)+5))
+  /usr/bin/docker run --name glastopf --rm=true -p 80:80 -v /data/glastopf dtagdevsec/glastopf
+end script
+post-start script
+  sleep $(((RANDOM % 5)+5))
 end script
