--- a/glastopf.cfg
+++ b/glastopf.cfg
@@ -98,3 +98,9 @@ banner = Apache/2.0.48
 google_meta =
 #http://www.bing.com/toolbox/webmaster
 bing_meta =
+
+[sensor]
+sensorid = None
+
+[profiler]
+enabled = False
