--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,3 +5,7 @@ nodaemon=true
 directory=/data/glastopf/
 command=glastopf-runner
 autorestart=true
+
+[program:ewsposter]
+command=/usr/bin/python /opt/ewsposter/ews.py -c /data/ews/conf/ -j /data/ews/glastopf/ -m glastopfv3 -l 120
+autorestart=true
