--- a/upstart/glastopf.conf
+++ b/upstart/glastopf.conf
@@ -2,7 +2,7 @@
 # T-Pot                                                #
 # Glastopf upstart script                              #
 #                                                      #
-# v16.03.1 by mo, DTAG, 2015-12-11                     #
+# v16.03.2 by mo, DTAG, 2015-12-14                     #
 ########################################################
 
 description "Glastopf"
@@ -16,12 +16,13 @@ pre-start script
   if [ "$myCID" != "" ];
     then docker rm -v $myCID;
   fi
+  # Remove any data from previous container
+  rm -rf /data/glastopf/*
 end script
 script
-  # Delayed start to avoid rapid respawning
-  sleep $(((RANDOM % 5)+5))
-  /usr/bin/docker run --name glastopf --rm=true -v /data/ews:/data/ews -p 80:80 dtagdevsec/glastopf:latest1603
+  /usr/bin/docker run --name glastopf --rm=true -v /data/glastopf:/data/glastopf -v /data/ews:/data/ews -p 80:80 dtagdevsec/glastopf:latest1603
 end script
 post-start script
+  # Delay next start to avoid rapid respawning
   sleep $(((RANDOM % 5)+5))
 end script
