--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,5 +7,5 @@ command=bash -c 'cp /opt/glastopf/glastopf.cfg /data/glastopf/ && glastopf-runne
 autorestart=true
 
 [program:ewsposter]
-command=/usr/bin/python /opt/ewsposter/ews.py -c /data/ews/conf/ -j /data/ews/glastopf/ -m glastopfv3 -l 120
+command=/usr/bin/python /opt/ewsposter/ews.py -c /data/ews/conf/ -m glastopfv3 -l 120
 autorestart=true
