improve glastopf startup

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 
 [program:glastopf]
 directory=/data/glastopf/
-command=bash -c 'cp /opt/glastopf/glastopf.cfg /data/glastopf/ && glastopf-runner'
+command=bash -c 'cp /opt/glastopf/glastopf.cfg /data/glastopf/ && exec glastopf-runner'
 autorestart=true
 
 [program:ewsposter]
