--- a/upstart/glastopf.conf
+++ b/upstart/glastopf.conf
@@ -2,7 +2,7 @@
 # T-Pot                                                #
 # Glastopf upstart script                              #
 #                                                      #
-# v16.03.2 by mo, DTAG, 2015-12-14                     #
+# v16.03.3 by mo, DTAG, 2016-02-08                     #
 ########################################################
 
 description "Glastopf"
@@ -17,7 +17,7 @@ pre-start script
     then docker rm -v $myCID;
   fi
   # Remove any data from previous container
-  rm -rf /data/glastopf/*
+  rm -rf /data/glastopf/* || true
 end script
 script
   /usr/bin/docker run --name glastopf --rm=true -v /data/glastopf:/data/glastopf -v /data/ews:/data/ews -p 80:80 dtagdevsec/glastopf:latest1603
