--- a/upstart/glastopf.conf
+++ b/upstart/glastopf.conf
@@ -2,7 +2,7 @@
 # T-Pot                                                #
 # Glastopf upstart script                              #
 #                                                      #
-# v16.03.3 by mo, DTAG, 2016-02-08                     #
+# v16.03.4 by mo, DTAG, 2016-03-04                     #
 ########################################################
 
 description "Glastopf"
@@ -16,13 +16,19 @@ pre-start script
   if [ "$myCID" != "" ];
     then docker rm -v $myCID;
   fi
-  # Remove any data from previous container
-  rm -rf /data/glastopf/* || true
+  # Remove any data from previous container if persistence is not enabled 
+  if ! [ -f /data/persistence.on ];
+    then
+      rm -rf /data/glastopf/* || true
+      mkdir -p /data/glastopf
+      chmod 760 /data/glastopf -R
+      chown tpot:tpot /data/glastopf -R
+  fi
 end script
 script
   /usr/bin/docker run --name glastopf --rm=true -v /data/glastopf:/data/glastopf -v /data/ews:/data/ews -p 80:80 dtagdevsec/glastopf:latest1603
 end script
 post-start script
   # Delay next start to avoid rapid respawning
-  sleep $(((RANDOM % 5)+5))
+  sleep 2
 end script
